--- a/cloud_controller.yml
+++ b/cloud_controller.yml
@@ -327,10 +327,10 @@ pending_builds:
   frequency_in_seconds: 300
 
 perm:
-  enabled: false
-  hostname: perm.service.cf.internal
-  port: 6283
-  ca_cert_path: "spec/fixtures/certs/perm_ca.crt"
+  enabled: true
+  hostname: localhost
+  port: 3333
+  ca_cert_path: "../code.cloudfoundry.org/mvcc/certs/perm-server.crt"
   timeout_in_milliseconds: 100
 
 credhub_api:
